--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "online-store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/OlhaTitova/6_React_Testing",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -19,6 +20,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
